--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
   </table>
   <p><strong>And Still Learning</strong></p>
   <hr>
+    <h3>My Courses</h3>
+  <ul>
+    <li>iOS & Swift - The Complete iOS App Development Bootcamp (udemy)</li>
+    <li>Learn and Understand Building Modern iOS Apps [2021] (udemy)</li>
+    <li>Adobe Photoshop CC – Essentials Training Course (udemy)</li>
+    <li>The Complete 2021 Web Development Bootcamp (udemy)</li>
+  </ul>
+  <hr>
   <h3>Spoken Languages</h3>
   <ul>
     <li>Arabic (Mother Language)</li>
